Remove Docker from ARM template.